--- a/frontend/src/styling/footer2.css
+++ b/frontend/src/styling/footer2.css
@@ -3,16 +3,15 @@
   height: 100px;
   background-color: #F8F8F8;
   box-sizing: border-box;
-  position: relative; /* Changed from sticky */
+  position: relative;
   bottom: 0;
   z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
-
-  margin-top: auto;
-  padding-top: 85px; /* Add some padding to push content down */
+  align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .footer-nav2 {
